tests/baselines/reference/unusedVariablesinModules1.errors.txt
unusedVariablesinModules1.ts(3,5): error TS6133: 'x' is declared but its value is never read.


==== unusedVariablesinModules1.ts (1 errors) ====
    export {};
    
    var x: string;
        ~
!!! error TS6133: 'x' is declared but its value is never read.
    
    export var y: string;